fix header z-index

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	z-index: 100;
 }
 
 header.scrolled {
